--- a/ITS_demo/template_new/index.html
+++ b/ITS_demo/template_new/index.html
@@ -76,6 +76,14 @@
             height: auto;  
             background-color: #F7F6E7;  
         }
+        .sec{
+          background-color: #3A6351;
+          /* margin-top: 40px; */
+          width:100vw;
+        }
+        .sec .card{
+          margin: 20px 0;
+        }
         @media (max-width:758px) {
             #rightsection h1{
                 font-size: 10vw;
@@ -131,6 +139,43 @@
                   </div>
               </div>
           </div>
+
+
+          <section class="sec">
+            <h1 style="text-align: center;font-size: 3.8rem;text-decoration: underline;color: white;padding: 10px 0;">Our Features</h1>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-4 col-md-12 col-sm-11">
+                  <div class="card" >
+                    <h5 class="card-title" style="text-align: center;font-size: 3rem;">Personalized Learning</h5>
+                    <img src="../static/images/Mathematics-bro.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text" style="font-size: 1.7rem;text-align: justify;">Students practice at their own pace,getting clear understanding of concepts.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-11">
+                  <div class="card" >
+                    <h5 class="card-title" style="text-align: center;font-size: 3rem;">User-Friendly Interface</h5>
+                    <img src="../static/images/Online test-amico.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text" style="font-size: 1.7rem;text-align: justify;">Simple & straight forward interface enabling users to built instant connect with system</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-11">
+                  <div class="card">
+                    <h5 class="card-title" style="text-align: center;font-size: 3rem;">Anywhere Accessibility</h5>
+                    <img src="../static/images/User-friendly.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text" style="font-size: 1.7rem;text-align: justify;">Practice questions using any devices from anywhere.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </section>
 
           <a href="https://storyset.com/education">Education illustrations by Storyset</a>
           <!-- User-Friendly Interface -->
