--- a/ITS_demo/template_new/index.html
+++ b/ITS_demo/template_new/index.html
@@ -346,7 +346,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div> 
 
           <a href="https://storyset.com/education">Education illustrations by Storyset</a>
           <!-- User-Friendly Interface -->
