--- a/ITS_demo/template_new/signup.html
+++ b/ITS_demo/template_new/signup.html
@@ -15,33 +15,33 @@
 	margin: 0;
 	padding: 0;	
 	font-family: Raleway, sans-serif;
+	
 }
 
 body {
-	/* background: linear-gradient(90deg, #C7C5F4, #776BCC);		 */
-    background-color: #f2edd7;
+    background-color: #E8F0F2;
+	overflow: hidden;
 }
 
 .container {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	min-height: 50vh;
+	min-height: 5vh;
 }
 
 .screen {		
-	/* background: linear-gradient(90deg, #5D54A4, #7C78B8);		 */
-    background-color: #3A6351;
+    background-color: #AAD8D3;
 	position: relative;	
-	height: 750px;
+	height: 630px;
 	width: 460px;	
-	box-shadow: 0px 0px 24px #3A6351;
+	box-shadow: 0px 0px 24px #AAD8D3;
 }
 
 .screen__content {
 	z-index: 1;
 	position: relative;	
-	height: 100%;
+	height: 80%;
 }
 
 .screen__background {		
@@ -72,7 +72,7 @@ body {
 .screen__background__shape2 {
 	height: 620px;
 	width: 620px;
-	background: #3A6351;	
+	background: #AAD8D3;	
 	top: -272px;
 	right: 0;	
 	border-radius: 32px;
@@ -99,7 +99,7 @@ body {
 
 .login {
 	width: 310px;
-	padding: 30px;
+	padding: 15px;
 	/* padding-top: 10px; */
 }
 
@@ -111,12 +111,12 @@ body {
 .login__icon {
 	position: absolute;
 	top: 30px;
-	color: #3A6351;
+	color: #AAD8D3;
 }
 
 .login__input {
 	border: none;
-	border-bottom: 2px solid #3A6351;
+	border-bottom: 2px solid #AAD8D3;
 	background: none;
 	padding: 10px;
 	padding-left: 24px;
@@ -129,23 +129,23 @@ body {
 .login__input:focus,
 .login__input:hover {
 	outline: none;
-	border-bottom-color: #3A6351;
+	border-bottom-color: #AAD8D3;
 }
 
 .login__submit {
 	background: #fff;
 	font-size: 14px;
-	margin-top: 30px;
-	padding: 16px 20px;
+	margin-top: 10px;
+	padding: 10px 20px;
 	border-radius: 26px;
-	border: 1px solid #3A6351;
+	border: 1px solid #AAD8D3;
 	text-transform: uppercase;
 	font-weight: 700;
 	display: flex;
 	align-items: center;
 	width: 100%;
-	color: #3A6351;
-	box-shadow: 0px 2px 2px #3A6351;
+	color: #212529;
+	box-shadow: 0px 2px 2px #AAD8D3;
 	cursor: pointer;
 	transition: .2s;
 }
@@ -153,14 +153,14 @@ body {
 .login__submit:active,
 .login__submit:focus,
 .login__submit:hover {
-	border-color: #3A6351;
+	border-color: #AAD8D3;
 	outline: none;
 }
 
 .button__icon {
 	font-size: 24px;
 	margin-left: auto;
-	color: #3A6351;
+	color: #AAD8D3;
 }
 
 .social-login {	
@@ -183,7 +183,7 @@ body {
 	padding: 20px 10px;
 	color: #000;
 	text-decoration: none;	
-	text-shadow: 0px 0px 8px #3A6351;
+	text-shadow: 0px 0px 8px #AAD8D3;
 }
 
 .social-login__icon:hover {
@@ -229,14 +229,14 @@ body {
                         <i class="button__icon fas fa-chevron-right"></i>
                     </button>				
                 </form>
-                <div class="social-login">
+                <!-- <div class="social-login">
                     <h3>Sign Up via</h3>
                     <div class="social-icons">
                         <a href="#" class="social-login__icon fab fa-instagram"></a>
                         <a href="#" class="social-login__icon fab fa-facebook"></a>
                         <a href="#" class="social-login__icon fab fa-twitter"></a>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="screen__background">
                 <span class="screen__background__shape screen__background__shape4"></span>
