--- a/ITS_demo/template_new/index.html
+++ b/ITS_demo/template_new/index.html
@@ -25,11 +25,14 @@
 		}
        .blue {
          /* background-color: #A2DBFA; */
-         background-color: #AAD8D3;
+         /* background-color: #AAD8D3; */
+         background-color: #d8f0ff;
        }
 
        .grey-light {
-         background-color: #E8F0F2;
+         /* background-color: #E8F0F2; */
+         /* background-color: #B2B1B9; */
+         background-color: #18A8D8;
        }
         #n1 {
             position: fixed; 
@@ -38,7 +41,7 @@
             top:0;
             left: 0;
             z-index: 9999; 
-            /* background-color: #262A53!important; */
+            /* background-color: #004860!important; */
      
         }
 
@@ -97,7 +100,7 @@
             }  
         }
         .contact-title{
-            /* color: white; */
+            color: white;
             text-align:center;
         }
 
@@ -124,6 +127,7 @@
             display: flex;
             justify-content: flex-start;
             align-items: center;
+            color: white;
         }
         .coin{
             display: flex;
