--- a/ITS_demo/template_new/index.html
+++ b/ITS_demo/template_new/index.html
@@ -26,13 +26,15 @@
        .blue {
          /* background-color: #A2DBFA; */
          /* background-color: #AAD8D3; */
-         background-color: #d8f0ff;
+         /* background-color: #d8f0ff; */
+         background-color: #0070BB;
        }
 
-       .grey-light {
+       .white {
          /* background-color: #E8F0F2; */
          /* background-color: #B2B1B9; */
-         background-color: #18A8D8;
+         /* background-color: #18A8D8; */
+         background-color: white;
        }
         #n1 {
             position: fixed; 
@@ -60,7 +62,7 @@
        
         #rightsection h1{
             font-family: 'Poppins', sans-serif;
-            color:#000;
+            color:#fff;
             font-size: 4vw;
         }
         #leftsection,#rightsection{
@@ -119,7 +121,7 @@
         border-bottom-style: groove;
         background-color: inherit;
         font-family: 'Poppins', sans-serif;
-        color:black;
+        color:#fff;
         font-size: 2.5vw;
         width: 30vw;
         }
@@ -138,10 +140,14 @@
         .contact-icons {
           height: 100px;
         }
+
+        .text-white {
+          color: white;
+        }
     </style>
 </head>
 <body>
-          <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav grey-light">
+          <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav white">
             <a class="navbar-brand" href="#">Logo PhiloMath</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -164,7 +170,7 @@
               </ul>
             </div>
           </nav>
-          <div class="main grey-light">
+          <div class="main blue">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-7 col-md-12 col-11 d-flex justify-content-around align-items-center" id="leftsection">
@@ -172,15 +178,15 @@
                     </div>
                     <div class="col-lg-5 col-md-12 col-11" id="rightsection">
                         <h1>All you need is a Tutor. PhiloMath - The Ultimate Tutoring System</h1>
-                        <button type="button" class="btn signup blue" style = "font-size: 1.5rem;">Sign Up Now</button>
-                        <button type="button" class="btn signup blue" style="font-size: 1.5rem;">Login </button>
+                        <a href="../template_new/signup.html"><button type="button" class="btn signup white" style = "font-size: 1.5rem;">Sign Up Now</button></a>
+                        <a href="../template_new/login.html"><button type="button" class="btn signup white" style="font-size: 1.5rem;">Login </button></a>
                     </div>
                   </div>
               </div>
           </div>
 
 
-          <section class="sec blue">
+          <section class="sec white">
             <h1 style="text-align: center;font-size: 3.8rem;text-decoration: underline;padding: 10px 0;">Our Features</h1>
             <div class="container-fluid" style="width:80%;">
               <div class="row">
@@ -250,7 +256,7 @@
 
             </div>
           </section> -->
-          <section class="sec grey-light">
+          <section class="sec blue">
               <div class="container-fluid">
                   <h1 class="contact-title">Contact Us</h1>
                   <p class="contact-title">Want to get in touch? We would love to hear from you. Fill the form below to drop us an email.</p>
@@ -265,8 +271,8 @@
                                 </div>
                                 <div class="col-md-8">
                                   <div class="card-body">
-                                    <h5 class="card-title">Address</h5>
-                                    <p>Mumbai, Maharashtra</p>
+                                    <h5 class="card-title text-white">Address</h5>
+                                    <p class="text-white">Mumbai, Maharashtra</p>
                                   </div>
                                 </div>
                               </div>
@@ -281,7 +287,7 @@
                                 </div>
                                 <div class="col-md-8">
                                   <div class="card-body">
-                                    <h5 class="card-title">Phone</h5>
+                                    <h5 class="card-title text-white">Phone</h5>
                                     <!-- <p class="card-text">+91 79772 69807 <br>+91 86930 19131 <br>+91 89766 67012</p> -->
                                   </div>
                                 </div>
@@ -298,8 +304,8 @@
                                 </div>
                                 <div class="col-md-8">
                                   <div class="card-body">
-                                    <h5 class="card-title">Email</h5>
-                                    <p class="card-text">SHRUTI.SOLANI@svkmmumbai.onmicrosoft.com <br>BHAVYA.THAKKAR1@svkmmumbai.onmicrosoft.com <br>RAJ.SHAH8@svkmmumbai.onmicrosoft.com</p>
+                                    <h5 class="card-title text-white">Email</h5>
+                                    <p class="card-text text-white">SHRUTI.SOLANI@svkmmumbai.onmicrosoft.com <br>BHAVYA.THAKKAR1@svkmmumbai.onmicrosoft.com <br>RAJ.SHAH8@svkmmumbai.onmicrosoft.com</p>
                                   </div>
                                 </div>
                               </div>
@@ -307,7 +313,7 @@
                           </div>
                       </div>
                       <div class="col-lg-5 col-md-12 col-11" id="rightsection">
-                        <div class="contact-form-box grey-light">
+                        <div class="contact-form-box white">
                         <h3>Send Message</h3><br>
                         <input type="text" name="" id="" placeholder="First Name"><br><br>
                         <input type="text" placeholder="Last Name"><br><br>
@@ -317,7 +323,7 @@
                       </div>
                   </div>
               </div>
-              <a href="https://storyset.com/education" style="text-decoration: none; color: black;">All illustrations by Storyset</a>
+              <a href="https://storyset.com/education" style="text-decoration: none; color: white;">All illustrations by Storyset</a>
             </section>
                 </div>
             </div>
