--- a/ITS_demo/template_new/signup.html
+++ b/ITS_demo/template_new/signup.html
@@ -19,7 +19,7 @@
 }
 
 body {
-    background-color: #E8F0F2;
+    background-color: #fff;
 	overflow: hidden;
 }
 
@@ -31,11 +31,12 @@ body {
 }
 
 .screen {		
-    background-color: #AAD8D3;
+    /* background-color: #AAD8D3; */
+	background-color: #0070BB;
 	position: relative;	
 	height: 630px;
 	width: 460px;	
-	box-shadow: 0px 0px 24px #AAD8D3;
+	box-shadow: 0px 0px 24px #0070BB;
 }
 
 .screen__content {
@@ -72,7 +73,7 @@ body {
 .screen__background__shape2 {
 	height: 620px;
 	width: 620px;
-	background: #AAD8D3;	
+	background: #0070BB;	
 	top: -272px;
 	right: 0;	
 	border-radius: 32px;
@@ -111,12 +112,12 @@ body {
 .login__icon {
 	position: absolute;
 	top: 30px;
-	color: #AAD8D3;
+	color: #0070BB;
 }
 
 .login__input {
 	border: none;
-	border-bottom: 2px solid #AAD8D3;
+	border-bottom: 2px solid #0070BB;
 	background: none;
 	padding: 10px;
 	padding-left: 24px;
@@ -129,7 +130,7 @@ body {
 .login__input:focus,
 .login__input:hover {
 	outline: none;
-	border-bottom-color: #AAD8D3;
+	border-bottom-color: #0070BB;
 }
 
 .login__submit {
@@ -138,14 +139,14 @@ body {
 	margin-top: 10px;
 	padding: 10px 20px;
 	border-radius: 26px;
-	border: 1px solid #AAD8D3;
+	border: 1px solid #0070BB;
 	text-transform: uppercase;
 	font-weight: 700;
 	display: flex;
 	align-items: center;
 	width: 100%;
 	color: #212529;
-	box-shadow: 0px 2px 2px #AAD8D3;
+	box-shadow: 0px 2px 2px #0070BB;
 	cursor: pointer;
 	transition: .2s;
 }
@@ -153,14 +154,14 @@ body {
 .login__submit:active,
 .login__submit:focus,
 .login__submit:hover {
-	border-color: #AAD8D3;
+	border-color: #0070BB;
 	outline: none;
 }
 
 .button__icon {
 	font-size: 24px;
 	margin-left: auto;
-	color: #AAD8D3;
+	color: #0070BB;
 }
 
 .social-login {	
@@ -183,7 +184,7 @@ body {
 	padding: 20px 10px;
 	color: #000;
 	text-decoration: none;	
-	text-shadow: 0px 0px 8px #AAD8D3;
+	text-shadow: 0px 0px 8px #0070BB;
 }
 
 .social-login__icon:hover {
@@ -224,10 +225,11 @@ body {
                         <i class="login__icon fas fa-graduation-cap"></i>
                         <input type="text" class="login__input" placeholder="Current Grade">
                     </div>
+					<a href="../template_new/home.html">
                     <button class="button login__submit">
                         <span class="button__text">Sign Up Now</span>
                         <i class="button__icon fas fa-chevron-right"></i>
-                    </button>				
+                    </button>				</a>
                 </form>
                 <!-- <div class="social-login">
                     <h3>Sign Up via</h3>
