--- a/ITS_demo/template_new/login_new.html
+++ b/ITS_demo/template_new/login_new.html
@@ -193,7 +193,7 @@ body {
     <div class="container">
         <div class="screen">
             <div class="screen__content">
-                <form class="login">
+                <form class="login" method='GET' action="../template_new/home.html">
                     <div class="login__field">
                         <i class="login__icon fas fa-user"></i>
                         <input type="text" class="login__input" placeholder="User name / Email">
@@ -202,12 +202,12 @@ body {
                         <i class="login__icon fas fa-lock"></i>
                         <input type="password" class="login__input" placeholder="Password">
                     </div>
-					<a href="../template_new/home.html">
+					<!-- <a href="../template_new/home.html"> -->
 						<button class="button login__submit">
 							<span class="button__text">Log In Now</span>
 							<i class="button__icon fas fa-chevron-right"></i>
 						</button>				
-					</a>
+					<!-- </a> -->
                 </form>
                 <!-- <div class="social-login">
                     <h3>log in via</h3>
