--- a/ITS_demo/template_new/home.html
+++ b/ITS_demo/template_new/home.html
@@ -157,7 +157,7 @@
               <li data-target="#demo" data-slide-to="4"></li>
             </ul>
             <!-- The slideshow -->
-              <div class="carousel-inner">
+              <!-- <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="../static/images/carimg1.jpg" alt="Los Angeles">
                   <div class="carousel-caption">
@@ -194,15 +194,15 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
             <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <!-- <a class="carousel-control-prev" href="#demo" data-slide="prev">
               <span class="carousel-control-prev-icon"></span>
             </a>
             <a class="carousel-control-next" href="#demo" data-slide="next">
               <span class="carousel-control-next-icon"></span>
             </a>
-          </div>
+          </div> -->
           <!-- <section class="s1" style="width:100%">
           		<div class="row">
           			<div class="card col-lg-10 col-md-12 col-sm-11" style="margin-bottom:8px" >
